@@ -1,13 +1,17 @@
 Changes from jTDS 1.0.3
 =======================
 
+05/30/2005 - Alin Sinpalean
+ o Changed the default prepareSQL mode from 1 (temporary stored procedures) to
+   3 (sp_prepare) for SQL Server. For Sybase, the default is still 1.
+
 05/27/2005 - Alin Sinpalean
  o Added initial support for fast forward only cursors.
  o Corrected yet another cancel synchronization issue caused by the end of
    response flag not being reset when a cancel packet was sent.
  o Corrected an issue causing hidden columns to "become visible" in result set
    meta data obtained from prepared statements.
- o Corrected bug [1209039] jTDS can deadlock when used with C3P0 connection 
+ o Corrected bug [1209039] jTDS can deadlock when used with C3P0 connection
    pooling; unnecessary synchronization on statements caused deadlocks.
 
 05/25/2005 - Alin Sinpalean
